fixed artwork not centred

--- a/src/styles/artwork.scss
+++ b/src/styles/artwork.scss
@@ -134,7 +134,6 @@
                 }
 
                 .content-container {
-                    flex-direction: column;
                     
                     .art-tile {
                         height: fit-content;
@@ -156,6 +155,7 @@
         }
 
         .no-blur {
+
             .artwork-container {
                 width: 80%;
 
@@ -168,7 +168,6 @@
                 }
 
                 .content-container {
-                    flex-direction: column;
                     
                     .art-tile {
                         height: fit-content;
